--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a style="color:#12d640">Robotics Decision Making Laboratory (RDML)</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://research.engr.oregonstate.edu/rdml/" style="color:#12d640">Robotics Decision Making Laboratory (RDML)</a><br> </h4>
                 <h5 style="text-align:left;"><a style="color:#23f554">Graduate Research Assistant (GRA)</a><br> </h5>
                 <h6 style="text-align:left;">December 2022 - Present</h6>
                 <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
