--- a/index.html
+++ b/index.html
@@ -337,20 +337,21 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Augmenify Infotech Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">August 2020 - November 2020</h5>
-                <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
+                <h4 style="text-align:left;"><a style="color:#12d640">Stealth (under NDA)</a><br> </h4>
+                <h5 style="text-align:left;">March 2021 - May 2022</h5>
+                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
                 <ul style="text-align:left;">
-                  <li>Documented and coded server‑less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li>
-                  <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
+                  <li>Design overall framework of automated system.</li>
+                  <li>Debug and improve the code to make it faster.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
+                <h5 style="text-align:left;">July 2020 - July 2021</h5>
+                <p style="text-align:left;color:#fff"><em>Robotics & Automation Lead</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                  <li>Tested, designed, and developed main navigation system, and automated safety systems.</li>
+                  <li> Design automated testing rigs.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
