--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                   <li> Design automated testing rigs.</li>
                 </ul>
               </div>
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <!-- <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
                 <h5 style="text-align:left;">May 2018 - June 2018</h5>
                 <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
@@ -373,7 +373,7 @@
                   <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
                   <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
                 </ul>
-            </div>
+            </div> -->
           </div>
         </div>
     </div>
