--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Programmer", "Robotics Researcher", "Software Developer", "AI Enthusiast", "Control System Engineer"],
+      strings: ["Algorithm Developer", "Robotics Researcher", "Software Programmer", "AI Enthusiast", "Systems Engineer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
