--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>NW Taylor Avenue</p>
+            <p>Taylor Avenue</p>
             <p>Corvallis</p>
             <p>Oregon</p>
           </div>
