--- a/index.html
+++ b/index.html
@@ -383,6 +383,76 @@
 
 
 
+  <!-- Start Student Experience Section -->
+
+  <section id="student experience" class="services">
+    <div class="container">
+      <div class="section-title">
+        <h2>Student Experience</h2>
+      </div>
+      <div class="row">
+          <div class="col-lg-12" data-aos="fade-up">
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.linkedin.com/company/ugvdtu/" style="color:#12d640">Unmanned Ground Vehicle (UGV-DTU)</a><br> </h4>
+                <h5 style="text-align:left;"><a style="color:#23f554"> Head of Embedded Systems and Team Lead</a><br> </h5>
+                <h6 style="text-align:left;">Dec 2017 - Sep 2019</h6>
+                <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
+                <ul style="text-align:left;">
+                  <li>Designed the overall circuitry and integrated GPS, IMU (Inertial Measurement Unit), LiDAR, Camera, and Encoder for proper functioning and localization of the vehicle.</li>
+                  <li>Designed overall control system of Vehicle and power distribution circuit.</li>
+                  <li>Participated in Annual IGVC 2018 (Intelligent Ground Vehicle Competition) held at Oakland University.</li>
+                  <!-- <li>.</li> -->
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a style="color:#12d640">Stealth (under NDA)</a><br> </h4>
+                <h5 style="text-align:left;">March 2021 - May 2022</h5>
+                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <ul style="text-align:left;">
+                  <li>Design overall framework of automated system.</li>
+                  <li>Debug and improve the code to make it faster.</li>
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
+                <h5 style="text-align:left;">July 2020 - July 2021</h5>
+                <p style="text-align:left;color:#fff"><em>Robotics & Automation Lead</em></p>
+                <ul style="text-align:left;">
+                  <li>Tested, designed, and developed main navigation system, and automated safety systems.</li>
+                  <li> Design automated testing rigs.</li>
+                </ul>
+              </div>
+              <!-- <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
+                <h5 style="text-align:left;">May 2018 - June 2018</h5>
+                <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
+                <ul style="text-align:left;">
+                  <li>Optimized image processing algorithm of pill detection by creating customized MASKRCNN  algorithm, increasing accuracy by 15%; trained classification algorithm with the help of triplet loss to learn the image embedding of pill, reducing the hassle of collecting data of new pills. </li>
+                  <li>Devised a pipeline of the project to incorporate it into the product of the company. Implemented Restful APIs in Django that enabled our quality Analyst team to increase reporting speed by 46%.</li>
+                  <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling interactive charts in real-time.</li>
+                  <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
+                <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
+                <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
+                <ul style="text-align:left;">
+                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
+                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
+                </ul>
+            </div> -->
+          </div>
+        </div>
+    </div>
+  </section>
+
+  <!-- End Student Experience Section -->
+
+
+
+
+
   <!-- Start Project Section -->
   <section id="portfolio" class="portfolio">
     <div class="container">
