--- a/index.html
+++ b/index.html
@@ -364,16 +364,16 @@
                   <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling interactive charts in real-time.</li>
                   <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
                 </ul>
-              </div>
+              </div> -->
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
-                <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
-                <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
+                <h4 style="text-align:left;"><a href="https://www.ntc.net.np/" target="_blank" style="color:#12d640">Nepal Telecom</a><br> </h4>
+                <h5 style="text-align:left;">May 2019 - July 2019</h5>
+                <p style="text-align:left;color:#fff"><em>Student Intern</em></p>
                 <ul style="text-align:left;">
-                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
-                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
+                  <li>Training about the entire architecture of NTC and all technologies used by Nepal Telcom mainly focusing on GSM, wireless network systems and Optical Fiber.</li>
+                  <li>Got the opportunity to work in 3 different domains namely Core, Backbone and Wireless networks under multiple mentors specializing in their respective domains.</li>
                 </ul>
-            </div> -->
+            </div>
           </div>
         </div>
     </div>
@@ -405,21 +405,21 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a style="color:#12d640">Stealth (under NDA)</a><br> </h4>
-                <h5 style="text-align:left;">March 2021 - May 2022</h5>
-                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <h4 style="text-align:left;"><a style="color:#12d640">Team Raftaar DTU</a><br> </h4>
+                <h5 style="text-align:left;">May 2018 - June 2019</h5>
+                <p style="text-align:left;color:#fff"><em>Head of Embedded Systems and Innovation</em></p>
                 <ul style="text-align:left;">
-                  <li>Design overall framework of automated system.</li>
-                  <li>Debug and improve the code to make it faster.</li>
+                  <li>Led the electronics team and designed the data collection and display system.</li>
+                  <li>Secured 1st prize in Innovation at ASME HPVC1, issued by ASME Human Powered Vehicle Competition North America East, 2018</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
                 <h5 style="text-align:left;">July 2020 - July 2021</h5>
-                <p style="text-align:left;color:#fff"><em>Robotics & Automation Lead</em></p>
+                <p style="text-align:left;color:#fff"><em>Founding Member</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed main navigation system, and automated safety systems.</li>
-                  <li> Design automated testing rigs.</li>
+                  <li>As head of corporate, got the opportunity to connect with different companies and brought in sponsors to fund our initiative.</li>
+                  <li> Organised Univrsity's first ever fintech festival with multiple competitions.</li>
                 </ul>
               </div>
               <!-- <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
