--- a/index.html
+++ b/index.html
@@ -774,6 +774,11 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+
+  <div id="sfc1ay4tb86ndx8tuxyn4zsp3da9mzndtku"></div>
+  <script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku&down=async" async></script>
+  <br><a href="https://www.freecounterstat.com">website counter</a><noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku" border="0" title="website counter" alt="website counter"></a></noscript>
+
 </body>
 
 </html>
