linking student experience

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li class="active"><a href="#header"> <span>Home</span></a></li>
           <li><a href="#about"><span>About</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
-          <li><a href="#experience"> <span>Experience</span></a></li>
+          <li><a href="#preexperience"> <span>Professional Experience</span></a></li>
           <li><a href="#studentexperience"> <span>Student Experience</span></a></li>
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
@@ -318,7 +318,7 @@
 
   <!-- Start Experience Section -->
 
-  <section id="experience" class="services">
+  <section id="proexperience" class="services">
     <div class="container">
       <div class="section-title">
         <h2>Experience</h2>
@@ -411,7 +411,7 @@
                 <p style="text-align:left;color:#fff"><em>Head of Embedded Systems and Innovation</em></p>
                 <ul style="text-align:left;">
                   <li>Led the electronics team and designed the data collection and display system.</li>
-                  <li>Secured 1st prize in Innovation at ASME HPVC1, issued by ASME Human Powered Vehicle Competition North America East, 2018</li>
+                  <li>Secured 1st prize in Innovation at ASME HPVC, issued by ASME Human Powered Vehicle Competition North America East, 2018</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -420,7 +420,7 @@
                 <p style="text-align:left;color:#fff"><em>Founding Member</em></p>
                 <ul style="text-align:left;">
                   <li>As head of corporate, got the opportunity to connect with different companies and brought in sponsors to fund our initiative.</li>
-                  <li> Organised Univrsity's first ever fintech festival with multiple competitions.</li>
+                  <li> Organised University's first ever fintech festival with multiple competitions.</li>
                 </ul>
               </div>
               <!-- <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
