--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   
   <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-  <div class="elfsight-app-1bc87bb0-5f21-46db-a856-39df14be6d79"></div>
+  <!-- <div class="elfsight-app-1bc87bb0-5f21-46db-a856-39df14be6d79"></div> -->
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
