--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   
-  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-  <!-- <div class="elfsight-app-1bc87bb0-5f21-46db-a856-39df14be6d79"></div> -->
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -782,6 +780,9 @@
 <div id="sfc1ay4tb86ndx8tuxyn4zsp3da9mzndtku"></div>
 <script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku&down=async" async></script>
 <br><a href="https://www.freecounterstat.com">website counter</a><noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku" border="0" title="website counter" alt="website counter"></a></noscript>
+
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-1bc87bb0-5f21-46db-a856-39df14be6d79"></div>
 
 </body>
 
