--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="active"><a href="#header"> <span>Home</span></a></li>
           <li><a href="#about"><span>About</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
-          <li><a href="#preexperience"> <span>Experience</span></a></li>
+          <li><a href="#proexperience"> <span>Experience</span></a></li>
           <li><a href="#studentexperience"> <span>Student Experience</span></a></li>
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
