experience issue fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#proexperience"> <span>Experience</span></a></li>
           <li><a href="#studentexperience"> <span>Student Experience</span></a></li>
-<!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
           <li><a href="https://drive.google.com/file/d/1EcK3IQOyV5IL15T0P0xnmtcrnlxmWrR4/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
@@ -83,6 +82,7 @@
 
     </div>
   </header><!-- End Header -->
+  <a href="https://smallcounter.com"><img src="https://smallcounter.com/count.php?c_style=1&id=1695269321" border=0 alt="web counter"></a><br><a href="https://smallcounter.com" style="font-size:9px;">hits counter</a><br>
 
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
@@ -181,8 +181,7 @@
       </div>
 
     </div><!-- End Interests -->
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <div class="elfsight-app-1bc87bb0-5f21-46db-a856-39df14be6d79"></div>
+
   </section><!-- End About Section -->
 
 
