experience issue fixed

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 
     </div>
   </header><!-- End Header -->
-  <a href="https://smallcounter.com"><img src="https://smallcounter.com/count.php?c_style=1&id=1695269321" border=0 alt="web counter"></a><br><a href="https://smallcounter.com" style="font-size:9px;">hits counter</a><br>
-
+  <a href="https://smallcounter.com"><img src="https://smallcounter.com/count.php?c_style=8&id=1695269462" alt="web counter"></a><br><a href="https://smallcounter.com" style="font-size:9px;">web counter</a><br>
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
 
