--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 
     </div>
   </header><!-- End Header -->
-  <a href="https://smallcounter.com"><img src="https://smallcounter.com/count.php?c_style=8&id=1695269462" alt="web counter"></a><br><a href="https://smallcounter.com" style="font-size:9px;">web counter</a><br>
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
 
@@ -626,7 +625,7 @@
             <h4 style="text-align:left;color:#09203a">Languages and Databases</h4>
                 <p style="text-align:left;">
                   <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50" width="150">
-                  <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="wikimedia.org" height="50" width="120">
                   <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90">
                   <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130">
