--- a/index.html
+++ b/index.html
@@ -647,10 +647,13 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Tools</h4>
                 <p style="text-align:left;">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Bullet_Physics_Logo.svg" alt="vectorlogo.zone" height="50" width="150">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Bullet_Physics_Logo.svg" alt="upload.wikimedia.org" height="50" width="150">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/NumPy_logo_2020.svg" alt="upload.wikimedia.org" height="50" width="150">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="upload.wikimedia.org" height="50" width="150">
                   <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="vectorlogo.zone" height="50" width="150">
                   <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
+                  
               </p>
           </div>
         </div>
