--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                   <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="wikimedia.org" height="50" width="60">
                   <img src="https://www.vectorlogo.zone/logos/julialang/julialang-ar21.svg" alt="vectorlogo.zone" height="50" width="150">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/R_logo.svg" alt="vectorlogo.zone" height="50" width="150">
-                  <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="upload.wikimedia.org" height="50" width="150">
+                  <img src="https://www.logo.wine/a/logo/R_(programming_language)/R_(programming_language)-Logo.wine.svg" alt="upload.wikimedia.org" height="50" width="60">
                   <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50" width="150">
                   <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
 
