experience issue fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#proexperience"> <span>Experience</span></a></li>
           <li><a href="#studentexperience"> <span>Student Experience</span></a></li>
-          <li><a href="#portfolio"> <span>Projects</span></a></li>
+          <!-- <li><a href="#portfolio"> <span>Projects</span></a></li> -->
           <li><a href="#skills"> <span>Skills</span></a></li>
           <li><a href="https://drive.google.com/file/d/1EcK3IQOyV5IL15T0P0xnmtcrnlxmWrR4/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
@@ -415,7 +415,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">A.S.S.E.T.S. DTU</a><br> </h4>
                 <h5 style="text-align:left;">July 2020 - July 2021</h5>
                 <p style="text-align:left;color:#fff"><em>Founding Member</em></p>
                 <ul style="text-align:left;">
@@ -454,7 +454,7 @@
 
 
 
-  <!-- Start Project Section -->
+  <!-- Start Project Section
   <section id="portfolio" class="portfolio">
     <div class="container">
 
@@ -524,7 +524,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>To-Do App</h4></center>
