--- a/index.html
+++ b/index.html
@@ -538,8 +538,7 @@
           </div>
         </div> -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <center><h4>Resume Section Classifier</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/resume.jpg" class="img-fluid" alt="">
@@ -550,7 +549,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <br>
@@ -564,7 +563,7 @@
             </div>
           </div>
         </div> -->
-
+<!-- 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <center><h4>Video Description Generator</h4></center>
           <div class="portfolio-wrap">
@@ -589,10 +588,10 @@
           </div>
         </div>
 
-        
+         -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+
           <center><h4>Image Generator</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/gan.jpg" class="img-fluid" alt="">
@@ -606,7 +605,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- End Project Section -->
 
