--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Robin Kumar Singh</a></h1>
+      <h1><a href="index.html">Robin K. Singh</a></h1>
       <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
