--- a/index.html
+++ b/index.html
@@ -104,10 +104,17 @@
           <img src="assets/img/LiPhoto.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic robotics engineer with a keen interest in machine learning and artificial
-            intelligence.
-            I am passionate about quantifying uncertainity and predicting future events based on information we
-            currently have.
+          <p>Welcome to my corner of the digital world! I'm a dedicated robotics engineer, currently working on decision
+            making in unstructured environment. For my thesis, I've taken up the the challenge of quantifying
+            uncertainty and predicting future pose of object underwater oscillating under different wave conditions.
+
+            My passion doesn't end with robotics. I'm also deeply intrigued by the dynamic world of stock market, with a
+            particular focus on options trading. The thrill of analyzing market trends and making strategic decisions is
+            akin to solving intricate puzzles, where each piece is a potential key to unlocking financial success.
+
+            Join me as I explore these two realms, where precision meets possibility, and every discovery propels us
+            forward into a future brimming with potential.
+
           </p>
           <div class="row">
             <div class="col-lg-6">
