--- a/index.html
+++ b/index.html
@@ -151,35 +151,41 @@
             <h3>Decision Making</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <i class="ri-bar-chart-box-line" style="color: #28a745;"></i>
+            <h3>Data Analysis & Visualization</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <i class="ri-file-list-3-line" style="color: #f1081f;"></i>
+            <h3>Algorithms</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <i class="ri-stock-line" style="color: #47aeff;"></i>
+            <h3>Finalncial Modeling</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-robot-line" style="color: #5578ff;"></i>
             <h3>Robotics</h3>
 
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-code-fill" style="color: #e80368;"></i>
             <h3>Machine Learning</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+        <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-git-merge-line" style="color: #1c7d32;"></i>
             <h3>Software Automation</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #f1081f;"></i>
-            <h3>Algorithms</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-stock-line" style="color: #47aeff;"></i>
-            <h3>Finalncial Modeling</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
