--- a/index.html
+++ b/index.html
@@ -106,23 +106,30 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Welcome to my corner of the digital world! I'm a dedicated robotics engineer, currently working on decision
             making in unstructured environment. For my thesis, I've taken up the the challenge of quantifying
-            uncertainty and predicting future pose of object underwater oscillating under different wave conditions.
+            uncertainty, predicting future pose of object underwater oscillating under different wave conditions, and
+            successfully grasping it.
+            My current work has been accepted at OCEANS '24. I plan on submiting my final thesis as a Journal article by
+            fall.
+            This will sum up my MS in Robotics. Hence, I'm on the lookout for roles working on interesting problems.
           </p>
           <p>
-            My passion doesn't end with robotics. I'm also deeply intrigued by the dynamic world of stock market, with a
-            particular focus on options trading. The thrill of analyzing market trends and making strategic decisions is
-            akin to solving intricate puzzles, where each piece is a potential key to unlocking financial success.
+            My enthusiasm extends beyond the realm of robotics into the vibrant and ever-changing stock market.
+            I harbor a special interest in options trading, where I've crafted an option pricing and prediction model.
+            This model is a work in progress, continually evolving with each new insight.
+            My objective is to establish a predictive framework that can discern market trends which would typically
+            elude timely human detection.
+            The thrill of analyzing market trends and making strategic decisions is akin to solving intricate puzzles
+            which no one knows answer to?
           </p>
           <p>
-            Join me as I explore these two realms, where precision meets possibility, and every discovery propels us
-            forward into a future brimming with potential.
-
+            When I'm not doing any of the above you can find me hiking around the PNW or on my bike (bike = motorbike!)
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182 (I won't pick up)
+                </li>
               </ul>
             </div>
             <div class="col-lg-6">
