--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Welcome to my corner of the digital world! I'm a dedicated robotics engineer, currently working on decision
             making in unstructured environment. For my thesis, I've taken up the the challenge of quantifying
-            uncertainty, predicting future pose of object underwater oscillating under different wave conditions, and
-            successfully grasping it.
-            My current work has been accepted at OCEANS '24. I plan on submiting my final thesis as a Journal article by
-            fall.
-            This will sum up my MS in Robotics. Hence, I'm on the lookout for roles working on interesting problems.
+            uncertainty, predicting future pose of object oscillating underwater under different wave conditions, and
+            successfully grasping it. My current work has been accepted at OCEANS '24.
+            I plan on submiting my final thesis as a Journal article by fall.
+            This will conclude my MS in Robotics. Hence, I'm on the lookout for roles working on interesting problems.
           </p>
           <p>
             My enthusiasm extends beyond the realm of robotics into the vibrant and ever-changing stock market.
@@ -128,7 +127,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182 (I won't pick up)
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182 (I won't pick up!)
                 </li>
               </ul>
             </div>
