--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             which no one knows answer to?
           </p>
           <p>
-            When I'm not doing any of the above you can find me hiking around the PNW or on my bike (bike = motorbike!)
+            When I'm not doing any of the above you can find me hiking around the PNW or on my motorbike
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182 (I won't pick up!)
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 503-606-6182
                 </li>
               </ul>
             </div>
