--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <p>
             When I'm not doing any of the above you can find me hiking around the PNW or on my motorbike
           </p>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
@@ -137,7 +137,7 @@
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> robinvishen@gmail.com</li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
