--- a/index.html
+++ b/index.html
@@ -374,50 +374,84 @@
 
 
   <!-- Start Student Experience Section -->
-
   <section id="studentexperience" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Student Experience</h2>
+        <h2>Projects</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
+
+          <!-- Project 1: Option Pricing -->
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a style="color:#12d640">Calculating Option Pricing using the Black-Scholes and
+                SABR Model</a><br> </h4>
+            <h5 style="text-align:left;">Jan 2024 - Present</h5>
+            <p style="text-align:left;color:#fff"><em>Independent Project</em></p>
+            <ul style="text-align:left;">
+              <li>Developed a comprehensive Python application for calculating option pricing using the Black-Scholes
+                and SABR models.</li>
+              <li>Implemented Monte Carlo simulations to validate the accuracy of pricing models.</li>
+              <li>Utilized pandas for data manipulation, NumPy for numerical calculations, and Matplotlib for data
+                visualization.</li>
+              <li>Conducted sensitivity analysis on model parameters to understand their impact on option prices.</li>
+            </ul>
+          </div>
+
+          <!-- Project 2: Motion Planning -->
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a style="color:#12d640">Motion Planning using D* Lite in an Unknown
+                Environment</a><br> </h4>
+            <h5 style="text-align:left;">Jan 2023 - Mar 2023</h5>
+            <p style="text-align:left;color:#fff"><em>Associated with Oregon State University</em></p>
+            <ul style="text-align:left;">
+              <li>Automated the task of pruning dormant tree branches by solving the motion planning problem of a
+                robotic arm.</li>
+              <li>Integrated map-building with path-planning using D* Lite algorithm to navigate through dense clutter
+                of tree branches.</li>
+              <li>Evaluated the approach using PyBullet simulator, demonstrating effective navigation and pruning.</li>
+            </ul>
+          </div>
+
+          <!-- Project 3: Unmanned Ground Vehicle (UGV-DTU) -->
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.linkedin.com/company/ugvdtu/"
                 style="color:#12d640">Unmanned Ground Vehicle (UGV-DTU)</a><br> </h4>
             <h5 style="text-align:left;"><a style="color:#23f554"> Head of Embedded Systems and Team Lead</a><br> </h5>
             <h6 style="text-align:left;">Dec 2017 - Sep 2019</h6>
-            <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
             <ul style="text-align:left;">
-              <li>Designed the overall circuitry and integrated GPS, IMU (Inertial Measurement Unit), LiDAR, Camera, and
-                Encoder for proper functioning and localization of the vehicle.</li>
-              <li>Designed overall control system of Vehicle and power distribution circuit.</li>
-              <li>Participated in Annual IGVC 2018 (Intelligent Ground Vehicle Competition) held at Oakland University.
+              <li>Designed and integrated GPS, IMU (Inertial Measurement Unit), LiDAR, Camera, and Encoder for vehicle
+                localization.</li>
+              <li>Developed the vehicle's control system and power distribution circuit.</li>
+              <li>Participated in the Annual IGVC 2018 (Intelligent Ground Vehicle Competition) at Oakland University.
               </li>
-              <!-- <li>.</li> -->
             </ul>
           </div>
+
+          <!-- Project 4: Team Raftaar DTU -->
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a style="color:#12d640">Team Raftaar DTU</a><br> </h4>
             <h5 style="text-align:left;">May 2018 - June 2019</h5>
             <p style="text-align:left;color:#fff"><em>Head of Embedded Systems and Innovation</em></p>
             <ul style="text-align:left;">
-              <li>Led the electronics team and designed the data collection and display system.</li>
+              <li>Led the electronics team in designing the data collection and display system for the vehicle.</li>
               <li>Secured 1st prize in Innovation at ASME HPVC, issued by ASME Human Powered Vehicle Competition North
-                America East, 2018</li>
+                America East, 2018.</li>
             </ul>
           </div>
+
+          <!-- Project 5: A.S.S.E.T.S. DTU -->
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/" style="color:#12d640">A.S.S.E.T.S.
                 DTU</a><br> </h4>
             <h5 style="text-align:left;">July 2020 - July 2021</h5>
             <p style="text-align:left;color:#fff"><em>Founding Member</em></p>
             <ul style="text-align:left;">
-              <li>As head of corporate, got the opportunity to connect with different companies and brought in sponsors
-                to fund our initiative.</li>
-              <li> Organised University's first ever fintech festival with multiple competitions.</li>
+              <li>As head of corporate, connected with various companies to secure sponsorships for the initiative.</li>
+              <li>Organized the university's first fintech festival featuring multiple competitions.</li>
             </ul>
           </div>
+
         </div>
       </div>
     </div>
