--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a href="#about"><span>About</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#proexperience"> <span>Experience</span></a></li>
-          <li><a href="#studentexperience"> <span>Student Experience</span></a></li>
+          <li><a href="#studentexperience"> <span>Projects</span></a></li>
           <!-- <li><a href="#portfolio"> <span>Projects</span></a></li> -->
           <li><a href="#skills"> <span>Skills</span></a></li>
           <li><a href="https://drive.google.com/file/d/1EcK3IQOyV5IL15T0P0xnmtcrnlxmWrR4/view?usp=sharing"
