updated about section

--- a/index.html
+++ b/index.html
@@ -105,33 +105,47 @@
                     <img src="assets/img/LiPhoto.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <p>Welcome to my corner of the digital world! I'm a dedicated robotics engineer, currently working
-                        on decision
-                        making in unstructured environment. For my thesis, I've taken up the the challenge of
-                        quantifying
-                        uncertainty, predicting future pose of object oscillating underwater in different wave
-                        conditions, and
-                        successfully grasping it. I presented my work at IEEE OCEANS 24, Halifax. This term I'll be
-                        defending my
-                        research work.
-                        This will conclude my MS in Robotics. Hence, I'm on the lookout for roles working on interesting
-                        problems.
+                    <p>Welcome to my digital workspace! I'm Robin K. Singh, a passionate robotics engineer with a keen
+                        interest in decision-making systems for autonomous robots operating in unstructured
+                        environments. My journey in robotics has been fueled by a relentless curiosity to explore the
+                        boundaries of machine autonomy and adaptability.
                     </p>
                     <p>
-                        My enthusiasm extends beyond the realm of robotics into the vibrant and ever-changing stock
-                        market.
-                        I harbor a special interest in options trading, where I've crafted an option pricing and
-                        prediction model.
-                        This model is a work in progress, continually evolving with each new insight.
-                        My objective is to establish a predictive framework that can discern market trends which would
-                        typically
-                        elude timely human detection.
-                        The thrill of analyzing market trends and making strategic decisions is akin to solving
-                        intricate puzzles
-                        which no one knows answer to?
+                        Currently, I'm pursuing my M.S. in Robotics at Oregon State University, with a focus on
+                        underwater robotic grasping. For my thesis, I've taken on the challenge of quantifying
+                        uncertainty and predicting the future pose of objects oscillating underwater under various wave
+                        conditions. This work involves developing dynamic grasping algorithms that account for real-time
+                        changes in object motion to achieve successful grasps. My research has been recognized by the
+                        IEEE OCEANS conference, where I had the opportunity to present my findings.
                     </p>
                     <p>
-                        When I'm not doing any of the above you can find me hiking around the PNW or on my motorbike
+                        As a Graduate Research Assistant at the Robotics Decision Making Laboratory (RDML), I’ve built
+                        custom ROS2-pyBullet nodes to enable real-time autonomy for underwater robotic systems. My
+                        contributions include creating prediction models for object motion, designing safety behaviors
+                        such as obstacle avoidance, and conducting extensive testing at the O.H. Hinsdale Wave Research
+                        Lab.
+                    </p>
+                    <p>
+                        Before delving into underwater robotics, I contributed to rider assistance and safety systems at
+                        Yatri Motorcycles. My role involved developing crash detection systems, implementing precise
+                        navigation algorithms using extended Kalman filters, and designing battery management systems.
+                        These experiences have honed my skills in integrating perception, planning, and control modules
+                        for real-world robotic applications.
+                    </p>
+                    <p>
+                        My academic foundation is complemented by hands-on experience in motion planning, SLAM, and
+                        dynamics simulation. I’ve worked on projects ranging from autonomous ground vehicles navigating
+                        crowded sidewalks to designing gimbal systems for improved camera stability and localization.
+                    </p>
+                    <p>
+                        Through my research and professional experiences, I aim to push the boundaries of what
+                        autonomous systems can achieve in complex and dynamic environments. Whether it’s underwater, on
+                        the road, or in unpredictable terrains, my goal is to enable robots to make informed decisions
+                        and adapt to their surroundings seamlessly.
+                    </p>
+                    <p>
+                        Thank you for visiting my page. Let’s connect and explore the fascinating world of robotics
+                        together!
                     </p>
                     <!-- <div class="row">
             <div class="col-lg-6">
