--- a/index.html
+++ b/index.html
@@ -398,6 +398,23 @@
                                 multiple mentors specializing in their respective domains.</li>
                         </ul>
                     </div>
+
+
+                    <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <h4 style="text-align:left;"><a href="https://www.ntc.net.np/" target="_blank"
+                                style="color:#12d640">Nepal
+                                Telecom</a><br> </h4>
+                        <h5 style="text-align:left;">May 2019 - July 2019</h5>
+                        <p style="text-align:left;color:#fff"><em>Student Intern</em></p>
+                        <ul style="text-align:left;">
+                            <li>Training about the entire architecture of NTC and all technologies used by Nepal Telcom
+                                mainly
+                                focusing on GSM, wireless network systems and Optical Fiber.</li>
+                            <li>Got the opportunity to work in 3 different domains namely Core, Backbone and Wireless
+                                networks under
+                                multiple mentors specializing in their respective domains.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -722,7 +739,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script type="text/javascript">
         var typed = new Typed('.typing', {
-            strings: ["Algorithm Developer", "Robotics Researcher", "Software Programmer", "AI Enthusiast", "Systems Engineer"],
+            strings: ["Robotics Engineer", "Algorithm Developer", "Programmer", "AI Enthusiast"],
             loop: true,
             typeSpeed: 65,
             backSpeed: 65
