--- a/index.html
+++ b/index.html
@@ -384,18 +384,19 @@
                     </div>
 
                     <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                        <h4 style="text-align:left;"><a href="https://www.ntc.net.np/" target="_blank"
-                                style="color:#12d640">Nepal
-                                Telecom</a><br> </h4>
-                        <h5 style="text-align:left;">May 2019 - July 2019</h5>
-                        <p style="text-align:left;color:#fff"><em>Student Intern</em></p>
+                        <h4 style="text-align:left;"><a target="_blank" style="color:#12d640">UNICEF Innovation
+                                Office</a><br> </h4>
+                        <h5 style="text-align:left;">Feb 2018 - Apr 2019</h5>
+                        <p style="text-align:left;color:#fff"><em>Researcher</em></p>
                         <ul style="text-align:left;">
-                            <li>Training about the entire architecture of NTC and all technologies used by Nepal Telcom
-                                mainly
-                                focusing on GSM, wireless network systems and Optical Fiber.</li>
-                            <li>Got the opportunity to work in 3 different domains namely Core, Backbone and Wireless
-                                networks under
-                                multiple mentors specializing in their respective domains.</li>
+                            <li>orked with an international team of 12 members to develop a 1U CubeSat to study RF
+                                connection in poverty-
+                                stricken areas (predominantly Africa). Evaluated various available technologies to
+                                detect and localize radio signals
+                                from space.</li>
+                            <li>tudied the feasibility of these technologies for CubeSat. In particular, space-based
+                                systems are used to analyze
+                                poverty, map schools, and perform disaster monitoring.</li>
                         </ul>
                     </div>
 
